# moonreader-py

./: .gitignore  README.md  compute_read_stats.py  main.py  pyproject.toml
.github/workflows/: deploy_azure_functions.yml
azure_webhook/: README.md  function_app.py  host.json  pyproject.toml  refresh_channel.py  requirements.txt  setup.py
gdrive_watcher/: README.md  main.py  pyproject.toml
gdrive_watcher_az/: .gitignore  function_app.py  pyproject.toml
src/moon_reader/: compute_read_stats.py  dateutils.py  render_html.py
static/: style.css
static/.sass-cache/f83f920c7e236f9295f279861c7af638b477d5f5/: style.scssc
templates/: graph.html  index.html
