[project]
name = "moon-reader"
version = "0.1.0"
description = "Core library for processing Moon+ Reader stats"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.11.1",
    "jinja2>=3.1.2",
    "gitignore-parser>=0.1.3",
    "lxml>=5.3.0",
    "rich>=14.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
moonm = "moon_reader.compute_read_stats:main"

[tool.basedpyright]
typeCheckingMode = "basic"
reportUnusedCallResult = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
