[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gdrive-watcher-az"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "azure-functions>=1.24.0",
    "beautifulsoup4>=4.11.1",
    "gitignore-parser>=0.1.3",
    "google-api-python-client>=2.190.0",
    "google-auth>=2.48.0",
    "jinja2>=3.1.2",
    "lxml>=5.3.0",
    "requests>=2.32.5",
    "rich>=14.3.3",
]

[tool.basedpyright]
typeCheckingMode = "basic"
reportUnusedCallResult = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"

[tool.setuptools]
py-modules = ["function_app", "refresh_channel"]
packages = ["moon_reader"]
